--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Bikram Pal"
 title_separator          : "-"
 name                     : &name "Bikram Pal"
 description              : &description "personal description"
-url                      : https://imbikrampal.github.io/bikrampal.github.io/ 
+url                      : https://Bikram-math.github.io/bikrampal.github.io/ 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "imbikrampal.github.io/bikrampal.github.io"
+repository               : "Bikram-math.github.io/bikrampal.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
